# chat-py

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: getting-started.md  parity.md  releasing.md
examples/e2e/: README.md  _common.py
examples/e2e/discord/: echo.py
examples/e2e/gchat/: echo.py
examples/e2e/github/: echo.py
examples/e2e/linear/: echo.py
examples/e2e/slack/: echo.py
examples/e2e/teams/: echo.py
examples/e2e/telegram/: echo.py
examples/e2e/whatsapp/: echo.py
scripts/: check.sh  format.sh  test.sh  typecheck.sh
thoughts/taras/plans/: 2026-04-22-des-196-adapter-webhook-dispatch.md
