[project]
name = "chat-py-workspace"
version = "0.1.0"
description = "Workspace for chat-py — a Python port of vercel/chat"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
chat-py = { workspace = true }
chat-py-adapter-shared = { workspace = true }
chat-py-adapter-slack = { workspace = true }
chat-py-adapter-discord = { workspace = true }
chat-py-adapter-teams = { workspace = true }
chat-py-adapter-gchat = { workspace = true }
chat-py-adapter-telegram = { workspace = true }
chat-py-adapter-github = { workspace = true }
chat-py-adapter-linear = { workspace = true }
chat-py-adapter-whatsapp = { workspace = true }
chat-py-adapter-state-memory = { workspace = true }
chat-py-adapter-state-redis = { workspace = true }
chat-py-adapter-state-ioredis = { workspace = true }
chat-py-adapter-state-pg = { workspace = true }
chat-py-integration-tests = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-redis>=4.6",
    "fakeredis[lua]>=2.20",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["chat"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/*/tests", "packages/*/src"]
addopts = ["--import-mode=importlib"]
